# parallel-bigrams-trigrams

./: .cproject  .gitignore  .project  CMakeLists.txt  HeartOfDarkness-JosephConrad.txt  README.md  main.cpp  main.exe.stackdump  parallel.cpp  parallel_token.cpp  plotter.ipynb  prova.txt  sequential.cpp  utilities.h
_build/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
